--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,226 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FrontEnd Store</title>
+
+    <!-- Agregando fuentes google fonts-->
+    <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
+    <!-- font-family: 'Staatliches', cursive; -->
+
 </head>
 
 <body>
+
+    <!-- Bloque -->
+    <header class="header">
+        <!-- Elemento -->
+        <a class="header__link" href="index.html">
+            <!-- Elemento -->
+            <img class="header__logo" src="./assets/img/logo.png" alt="Logo de la empresa">
+        </a>
+    </header>
+
+    <!-- Bloque -->
+    <nav class="navegacion">
+        <!-- Elementos -->
+        <a class="navegacion__enlace navegacion__enlace--activo" href="index.html">Tienda</a>
+        <a class="navegacion__enlace" href="nosotros.html">Nosotros</a>
+    </nav>
+
+    <!-- Bloque -->
+    <main class="contenedor">
+        <h1>Nuestros Productos</h1>
+
+
+        <div class="grid" id="">
+
+
+
+            <!-- Bloque -->
+            <div class="producto" id="">
+                <a href="productos.html">
+                    <img class="producto__imagen" src="./assets/img/1.jpg" alt="Camisa Vue js">
+                    <div class="producto__informacion" id="">
+                        <p class="producto__nombre">VueJS</p>
+                        <p class="producto__precio">$25</p>
+                    </div>
+                </a>
+            </div>
+            <!--Fin Bloque-->
+
+            <!-- Bloque -->
+            <div class="producto" id="">
+                <a href="productos.html">
+                    <img class="producto__imagen" src="./assets/img/2.jpg" alt="Camisa Vue js">
+                    <div class="producto__informacion" id="">
+                        <p class="producto__nombre">Angular JS</p>
+                        <p class="producto__precio">$25</p>
+                    </div>
+                </a>
+            </div>
+            <!--Fin Bloque-->
+
+            <!-- Bloque -->
+            <div class="producto" id="">
+                <a href="productos.html">
+                    <img class="producto__imagen" src="./assets/img/3.jpg" alt="Camisa Vue js">
+                    <div class="producto__informacion" id="">
+                        <p class="producto__nombre">React JS</p>
+                        <p class="producto__precio">$25</p>
+                    </div>
+                </a>
+            </div>
+            <!--Fin Bloque-->
+
+            <!-- Bloque -->
+            <div class="producto" id="">
+                <a href="productos.html">
+                    <img class="producto__imagen" src="./assets/img/4.jpg" alt="Camisa Vue js">
+                    <div class="producto__informacion" id="">
+                        <p class="producto__nombre">Redux</p>
+                        <p class="producto__precio">$25</p>
+                    </div>
+                </a>
+            </div>
+            <!--Fin Bloque-->
+
+            <!-- Bloque -->
+            <div class="producto" id="">
+                <a href="productos.html">
+                    <img class="producto__imagen" src="./assets/img/5.jpg" alt="Camisa Vue js">
+                    <div class="producto__informacion" id="">
+                        <p class="producto__nombre">Node JS</p>
+                        <p class="producto__precio">$25</p>
+                    </div>
+                </a>
+            </div>
+            <!--Fin Bloque-->
+
+            <!-- Bloque -->
+            <div class="producto" id="">
+                <a href="productos.html">
+                    <img class="producto__imagen" src="./assets/img/6.jpg" alt="Camisa Vue js">
+                    <div class="producto__informacion" id="">
+                        <p class="producto__nombre">Sass</p>
+                        <p class="producto__precio">$25</p>
+                    </div>
+                </a>
+            </div>
+            <!--Fin Bloque-->
+
+            <!-- Bloque -->
+            <div class="producto" id="">
+                <a href="productos.html">
+                    <img class="producto__imagen" src="./assets/img/7.jpg" alt="Camisa Vue js">
+                    <div class="producto__informacion" id="">
+                        <p class="producto__nombre">Html</p>
+                        <p class="producto__precio">$25</p>
+                    </div>
+                </a>
+            </div>
+            <!--Fin Bloque-->
+
+            <!-- Bloque -->
+            <div class="producto" id="">
+                <a href="productos.html">
+                    <img class="producto__imagen" src="./assets/img/8.jpg" alt="Camisa Vue js">
+                    <div class="producto__informacion" id="">
+                        <p class="producto__nombre">Git Hub</p>
+                        <p class="producto__precio">$25</p>
+                    </div>
+                </a>
+            </div>
+            <!--Fin Bloque-->
+
+            <!-- Bloque -->
+            <div class="producto" id="">
+                <a href="productos.html">
+                    <img class="producto__imagen" src="./assets/img/9.jpg" alt="Camisa Vue js">
+                    <div class="producto__informacion" id="">
+                        <p class="producto__nombre">Bulma Framework</p>
+                        <p class="producto__precio">$25</p>
+                    </div>
+                </a>
+            </div>
+            <!--Fin Bloque-->
+
+            <!-- Bloque -->
+            <div class="producto" id="">
+                <a href="productos.html">
+                    <img class="producto__imagen" src="./assets/img/10.jpg" alt="Camisa Vue js">
+                    <div class="producto__informacion" id="">
+                        <p class="producto__nombre">TypeScript</p>
+                        <p class="producto__precio">$25</p>
+                    </div>
+                </a>
+            </div>
+            <!--Fin Bloque-->
+
+            <!-- Bloque -->
+            <div class="producto" id="">
+                <a href="productos.html">
+                    <img class="producto__imagen" src="./assets/img/11.jpg" alt="Camisa Vue js">
+                    <div class="producto__informacion" id="">
+                        <p class="producto__nombre">Drupal</p>
+                        <p class="producto__precio">$25</p>
+                    </div>
+                </a>
+            </div>
+            <!--Fin Bloque-->
+
+            <!-- Bloque -->
+            <div class="producto" id="">
+                <a href="productos.html">
+                    <img class="producto__imagen" src="./assets/img/12.jpg" alt="Camisa Vue js">
+                    <div class="producto__informacion" id="">
+                        <p class="producto__nombre">JavaScript</p>
+                        <p class="producto__precio">$25</p>
+                    </div>
+                </a>
+            </div>
+            <!--Fin Bloque-->
+
+            <!-- Bloque -->
+            <div class="producto" id="">
+                <a href="productos.html">
+                    <img class="producto__imagen" src="./assets/img/13.jpg" alt="Camisa Vue js">
+                    <div class="producto__informacion" id="">
+                        <p class="producto__nombre">GraphQL</p>
+                        <p class="producto__precio">$25</p>
+                    </div>
+                </a>
+            </div>
+            <!--Fin Bloque-->
+
+            <!-- Bloque -->
+            <div class="producto" id="">
+                <a href="productos.html">
+                    <img class="producto__imagen" src="./assets/img/14.jpg" alt="Camisa Vue js">
+                    <div class="producto__informacion" id="">
+                        <p class="producto__nombre">WordPress</p>
+                        <p class="producto__precio">$25</p>
+                    </div>
+                </a>
+            </div>
+            <!--Fin Bloque-->
+
+            <!-- posicionar elementos con cssGrid -->
+            <div class="grafico graico--camisas" id="">
+
+            </div>
+
+            <div class="grafico grafico--node" id="">
+
+            </div>
+
+        </div>
+
+    </main>
+
+
+    <!-- Bloque -->
+    <footer class="footer">
+        <p class="footer__text">Front End Store - Todos los derechos Reservados 2022</p>
+    </footer>
 
 </body>
 
